--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 
-		<h1 class="main-hed">This webpage is by YOURNAME</h1>
+		<h1 class="main-hed">This webpage is by Mareike Nebel</h1>
 		
     <p>
       This webpage is for the Spring 2021 Journalism Design Toolkit class as part of the <a href="https://www.newschool.edu/lang/journalism-design/">Journalism+Design department</a> at Eugene Lang College for Liberal Arts at the New School University.
