--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Mareike Nebel’s Homepage for Journalism Design Toolkit</title>
+		<title>Mareike Nebels’s Homepage for Journalism Design Toolkit</title>
 	<!-- 	<link rel="stylesheet" href="stylesheets/styles.css" type="text/css" /> -->
 	</head>
 
 	<body>
 
 		<h1 class="main-hed">This webpage is by Mareike Nebel</h1>
-		
+
     <p>
       This webpage is for the Spring 2021 Journalism Design Toolkit class as part of the <a href="https://www.newschool.edu/lang/journalism-design/">Journalism+Design department</a> at Eugene Lang College for Liberal Arts at the New School University.
-      
-      
+
+
     </p>
 
 		<a href="https://journalismdesign.com/">
-  		<img class="logo" src="images/jd-logo.svg">
+  		<img class="logo" src="jd-logo.jpg">
 		</a>
-		
+
     <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu volutpat odio facilisis mauris sit amet massa. Pretium aenean pharetra magna ac placerat vestibulum. Nisi porta lorem mollis aliquam. Vel quam elementum pulvinar etiam non quam lacus suspendisse. Ornare lectus sit amet est placerat. Ut tellus elementum sagittis vitae et leo duis ut diam. Viverra accumsan in nisl nisi scelerisque eu. Viverra nam libero justo laoreet. Diam sollicitudin tempor id eu nisl. Mauris sit amet massa vitae tortor condimentum lacinia. Ut faucibus pulvinar elementum integer enim neque. Mauris pharetra et ultrices neque. Turpis egestas maecenas pharetra convallis. Massa enim nec dui nunc mattis enim ut tellus. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing.
     </p>
@@ -33,4 +33,3 @@
 	</body>
 
 </html>
-
