--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </p>
 
 		<a href="https://journalismdesign.com/">
-  		<img class="logo" src="jd-logo.jpg">
+  		<img class="logo" src="jd-logo.svg">
 		</a>
 
     <p>
