--- a/photos.html
+++ b/photos.html
@@ -4,26 +4,31 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>YOURNAME’s Homepage for Journalism Design Toolkit</title>
+		<title> Photo Page for Journalism Design Toolkit</title>
 	<!-- 	<link rel="stylesheet" href="stylesheets/styles.css" type="text/css" /> -->
 	</head>
 
 	<body>
 
-		<h1 class="main-hed">This webpage is by YOURNAME</h1>
-		
+		<h1 class="main-hed">This webpage is by Mareike Nebel</h1>
+
     <p>
-      This webpage is for the Spring 2021 Journalism Design Toolkit class as part of the <a href="https://www.newschool.edu/lang/journalism-design/">Journalism+Design department</a> at Eugene Lang College for Liberal Arts at the New School University.
-      
-      
+      This webpage is for the Spring 2021 Journalism Design Toolkit class as part of the Basic Image Editing assignment.
+
+
     </p>
 
-		<a href="https://journalismdesign.com/">
-  		<img class="logo" src="jd-logo.svg">
+
 		</a>
-		
+
     <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu volutpat odio facilisis mauris sit amet massa. Pretium aenean pharetra magna ac placerat vestibulum. Nisi porta lorem mollis aliquam. Vel quam elementum pulvinar etiam non quam lacus suspendisse. Ornare lectus sit amet est placerat. Ut tellus elementum sagittis vitae et leo duis ut diam. Viverra accumsan in nisl nisi scelerisque eu. Viverra nam libero justo laoreet. Diam sollicitudin tempor id eu nisl. Mauris sit amet massa vitae tortor condimentum lacinia. Ut faucibus pulvinar elementum integer enim neque. Mauris pharetra et ultrices neque. Turpis egestas maecenas pharetra convallis. Massa enim nec dui nunc mattis enim ut tellus. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing.
+ Below is the edits of the image I took and how I had to alter it. For our assignment, we had to create and edit the same image 5 times in all different ways. Based on pixel size, width, height, and quality of image.
+
+<img src="1.food-cropped-1000x1333-med-res.jpg" width="1000" height="1333">
+<img src="2.food-cropped-800x600.png" width="800" height="600">
+<img src="3.food-cropped-1000x562.5-high-res.jpg" width "1000" height="562.2">
+<img src="4.food-cropped-600x400-low-res.jpg" width="600" height="400">
+<img src="5.food-cropped-300x300-med-res.jpg" width="300" height="300">
     </p>
 
 		<p>
@@ -33,4 +38,3 @@
 	</body>
 
 </html>
-
