--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 		</a>
 <!-- this is a comment for myself -->
     <p>
-     Hello my name is Mareike Nebel. I am a student at the New School. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu volutpat odio facilisis mauris sit amet massa. Pretium aenean pharetra magna ac placerat vestibulum. Nisi porta lorem mollis aliquam. Vel quam elementum pulvinar etiam non quam lacus suspendisse. Ornare lectus sit amet est placerat. Ut tellus elementum sagittis vitae et leo duis ut diam. Viverra accumsan in nisl nisi scelerisque eu. Viverra nam libero justo laoreet. Diam sollicitudin tempor id eu nisl. Mauris sit amet massa vitae tortor condimentum lacinia. Ut faucibus pulvinar elementum integer enim neque. Mauris pharetra et ultrices neque. Turpis egestas maecenas pharetra convallis. Massa enim nec dui nunc mattis enim ut tellus. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing.
+     Hello my name is Mareike Nebel. I am a student at the New School.
     </p>
+		
 <a href="pages/photos.html">A site where I am storing my photos I edited!</a>
 
 
