--- a/photos.html
+++ b/photos.html
@@ -15,9 +15,8 @@
     <p>
       This webpage is for the Spring 2021 Journalism Design Toolkit class as part of the Basic Image Editing assignment.
 
-
     </p>
-
+Back to the front <a href="index.html"> page!</a>
 
 		</a>
 
