--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
      Hello my name is Mareike Nebel. I am a student at the New School.
     </p>
 
-<a href="pages/photos.html">A site where I am storing my photos I edited!</a>
+A site <a href="pages/photos.html"> where I am storing my photos I edited!</a>
+		<p>
 
 
 <img src="my-bedroom-2021-02-02.jpg" width="500" height="500">
