--- a/photos.html
+++ b/photos.html
@@ -16,7 +16,7 @@
       This webpage is for the Spring 2021 Journalism Design Toolkit class as part of the Basic Image Editing assignment.
 
     </p>
-Back to the front <a href="index.html"> page!</a>
+Back to the front <a href="Journalism Design Toolkit/index.html"> page!</a>
 
 		</a>
 
