--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
     </p>
 
 A site <a href="pages/photos.html"> where I am storing my photos I edited!</a>
-		<p>
+
+
 
 
 <img src="my-bedroom-2021-02-02.jpg" width="500" height="500">
 
 
 You can visit <a href="https://www.pinterest.com">Pinterest</a>.
+</body>
+
 </html>
