--- a/photos.html
+++ b/photos.html
@@ -20,8 +20,7 @@
 
 		</a>
 
-    <p>
- Below is the edits of the image I took and how I had to alter it. For our assignment, we had to create and edit the same image 5 times in all different ways. Based on pixel size, width, height, and quality of image.
+Back to the front page! <a href="index.html"><a/> 
 
 <img src="1.food-cropped-1000x1333-med-res.jpg" width="1000" height="1333">
 <img src="2.food-cropped-800x600.png" width="800" height="600">
