--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      Hello my name is Mareike Nebel. I am a student at the New School.
     </p>
 
-A site <a href="pages/photos.html"> where I am storing my photos I edited!</a>
+A site <a href="https://nebem926.github.io/jdtoolkit-homepage/pages/photos.html/"> where I am storing my photos I edited!</a>
 
 
 
