--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 <!-- this is a comment for myself -->
     <p>
      Hello my name is Mareike Nebel. I am a student at the New School.
-    </p>
 
-A site <a href="https://nebem926.github.io/jdtoolkit-homepage/pages/photos.html/"> where I am storing my photos I edited!</a>
 
+A site <a href="/pages/photos.html">where</a> I am storing my photos I edited!
+
+  </p>
 
 
 
