--- a/photos.html
+++ b/photos.html
@@ -30,7 +30,7 @@ Below is the image I took and then edited five different ways based on the assig
 <img src="5.food-cropped-300x300-med-res.jpg" width="300" height="300">
 
     </p>
-	Back to the front page! <a href="https://nebem926.github.io/jdtoolkit-homepag"><a/>
+	Back to the front page! <a href="https://nebem926.github.io/jdtoolkit-homepage/">photos</a>
 		<p>
 
 		</p>
