--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      Hello my name is Mareike Nebel. I am a student at the New School.
 
 
-A site <a href="https://nebem926.github.io/jdtoolkit-homepage/pages/photos.html">photos</a> I am storing my photos I edited!
+A site <a href="https://nebem926.github.io/pages/photos.html">photos</a> I am storing my photos I edited!
 
   </p>
 
