--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 
 A site <a href="pages/photos.html">photos</a> I am storing my photos I edited!
-
-  </p>
+			<img src="food.jpeg" alt="food">
+  </a>
 
 
 
