--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
      Hello my name is Mareike Nebel. I am a student at the New School.
 
 
-A site <a href="pages/photos.html">photos</a> I am storing my photos I edited!
-			<img src="food.jpeg" alt="food">
-  </a>
+A site <a href="photos.html">photos</a> I am storing my photos I edited!
+
 
 
 
