--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
     <p>
      Hello my name is Mareike Nebel. I am a student at the New School.
 
+<html>
+		  <head>
+		       <title>https://nebem926.github.io/jdtoolkit-homepage/photos.html</title>
+		    </head>
 
+		    <body>
+		       <h1>Photos Page</h1>
 A site <a href="photos.html">photos</a> I am storing my photos I edited!
 
 
