--- a/photos.html
+++ b/photos.html
@@ -30,11 +30,16 @@ Below is the image I took and then edited five different ways based on the assig
 <img src="5.food-cropped-300x300-med-res.jpg" width="300" height="300">
 
     </p>
-	Back to the front page! <a href="index.html">Home Page</a>
+		<html>
+		   <head>
+		      <title>https://nebem926.github.io/jdtoolkit-homepage/</title>
+		   </head>
 
-		<p>
+		   <body>
+		      <h1>Back to the front page!</h1>
+	 <a href="index.html">Home Page</a>
 
-		</p>
+
 
 	</body>
 
