--- a/photos.html
+++ b/photos.html
@@ -35,6 +35,16 @@ Below is the image I took and then edited five different ways based on the assig
 		      <title>https://nebem926.github.io/jdtoolkit-homepage/</title>
 		   </head>
 
+Underneath is the new photoshop assignment for class.
+
+This photo was overexposed. Here is the before and after I edited it to readjust the lighting to lower the exposure.
+<img src="nebel-before-overexposed.jpg" width ="600" height="800"> <img src="nebel-after-overexposed.jpg" width="600" height="800">
+
+
+
+
+
+
 		   <body>
 		      <h1>Back to the front page!</h1>
 	 <a href="index.html">Home Page</a>
