--- a/photos.html
+++ b/photos.html
@@ -10,15 +10,7 @@
 
 	<body>
 
-		<h1 class="main-hed">This webpage is by Mareike Nebel</h1>
-
-    <p>
-
-
-    </p>
-
-
-		</a>
+		<h1 class="main-hed">Photos Page</h1>
 
     <p>
 Below is the image I took and then edited five different ways based on the assignment we were given. The point of the assigment was to test our ability with photo editing and trying to connect web pages with one and other.
@@ -35,15 +27,20 @@ Below is the image I took and then edited five different ways based on the assig
 		      <title>https://nebem926.github.io/jdtoolkit-homepage/</title>
 		   </head>
 
-Underneath is the new photoshop assignment for class.
+    <p>
+<h1 class="main-hed">Underneath is the new photoshop assignment for class.</h1>
 
-This photo was overexposed. Here is the before and after I edited it to readjust the lighting to lower the exposure.
+This photo was too overexposed. Here is the before and after I edited it to readjust the lighting to lower the exposure.
 <img src="nebel-before-overexposed.jpg" width ="600" height="800"> <img src="nebel-after-overexposed.jpg" width="600" height="800">
 
+This photo had the issue of being underexposed. Here is the before and after I edited it to fix the underexposure.
+<img src="nebel-before-underexposed.jpg" width="600" height="800"> <img src="nebel-after-underexposed.jpg" width="600" height="800">
 
+For the next task, we had to take three images and bring them into a banner together.
+<img src="nebel-banner.jpg" width="2040" height="660">
 
-
-
+We had the chance to be creative as well and do whatever we want with photoshop.
+<img src="nebel-freestyle.jpg" width="600" height="800">
 
 		   <body>
 		      <h1>Back to the front page!</h1>
