--- a/photos.html
+++ b/photos.html
@@ -30,13 +30,18 @@ Below is the image I took and then edited five different ways based on the assig
     <p>
 <h1 class="main-hed">Underneath is the new photoshop assignment for class.</h1>
 
-This photo was too overexposed. Here is the before and after I edited it to readjust the lighting to lower the exposure.
-<img src="nebel-before-overexposed.jpg" width ="600" height="800"> <img src="nebel-after-overexposed.jpg" width="600" height="800">
+This photo was too overexposed. Here is the before and after I edited it to
+readjust the lighting to lower the exposure.
+<img src="nebel-before-overexposed.jpg" width ="600" height="800">
+<img src="nebel-after-overexposed.jpg" width="600" height="800">
 
-This photo had the issue of being underexposed. Here is the before and after I edited it to fix the underexposure.
-<img src="nebel-before-underexposed.jpg" width="600" height="800"> <img src="nebel-after-underexposed.jpg" width="600" height="800">
+This photo had the issue of being underexposed. Here is the before and after I
+edited it to fix the underexposure.
+<img src="nebel-before-underexposed.jpg" width="600" height="800">
+<img src="nebel-after-underexposed.jpg" width="600" height="800">
 
-For the next task, we had to take three images and bring them into a banner together.
+For the next task, we had to take three images
+and bring them into a banner together.
 <img src="nebel-banner.jpg" width="2040" height="660">
 
 We had the chance to be creative as well and do whatever we want with photoshop.
