--- a/photos.html
+++ b/photos.html
@@ -40,12 +40,16 @@ edited it to fix the underexposure.
 <img src="nebel-before-underexposed.jpg" width="600" height="800">
 <img src="nebel-after-underexposed.jpg" width="600" height="800">
 
-For the next task, we had to take three images
-and bring them into a banner together.
+For the next task, we had to take three images &
+bring them into a banner together.
 <img src="nebel-banner.jpg" width="2040" height="660">
+
+This picture of my roommates is used for overlaying the J+D department logo.
+<img src="nebel-group-overlay.jpg" width="8400" height="4725">
 
 We had the chance to be creative as well and do whatever we want with photoshop.
 <img src="nebel-freestyle.jpg" width="600" height="800">
+
 
 		   <body>
 		      <h1>Back to the front page!</h1>
