--- a/photos.html
+++ b/photos.html
@@ -13,7 +13,10 @@
 		<h1 class="main-hed">Photos Page</h1>
 
     <p>
-Below is the image I took and then edited five different ways based on the assignment we were given. The point of the assigment was to test our ability with photo editing and trying to connect web pages with one and other.
+Below is the image I took and then edited five
+different ways based on the assignment we were given.
+The point of the assigment was to test our ability with photo editing and
+trying to connect web pages with one and other.
 
 <img src="1.food-cropped-1000x1333-med-res.jpg" width="1000" height="1333">
 <img src="2.food-cropped-800x600.png" width="800" height="600">
@@ -32,22 +35,30 @@ Below is the image I took and then edited five different ways based on the assig
 
 This photo was too overexposed. Here is the before and after I edited it to
 readjust the lighting to lower the exposure.
+
+
 <img src="nebel-before-overexposed.jpg" width ="600" height="800">
 <img src="nebel-after-overexposed.jpg" width="600" height="800">
 
 This photo had the issue of being underexposed. Here is the before and after I
 edited it to fix the underexposure.
+
+
 <img src="nebel-before-underexposed.jpg" width="600" height="800">
 <img src="nebel-after-underexposed.jpg" width="600" height="800">
 
 For the next task, we had to take three images &
 bring them into a banner together.
+
+
 <img src="nebel-banner.jpg" width="2040" height="660">
 
 This picture of my roommates is used for overlaying the J+D department logo.
+
 <img src="nebel-group-overlay.jpg" width="900" height="506">
 
-We had the chance to be creative as well and do whatever we want with photoshop.
+We had the chance to be creative as well and do whatever we want with photos.
+
 <img src="nebel-freestyle.jpg" width="600" height="800">
 
 
