--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body>
-
+<img class+"logo" src="nebel-illustratorlogo.svg"> 
 		<h1 class="main-hed">This webpage is by Mareike Nebel</h1>
 
     <p>
