--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
 		       <h1>Photos Page</h1>
 A site <a href="photos.html">photos</a> I am storing my photos I edited!
 
-
+<html>
+		<head>
+			<title>https://nebem926.github.io/jdtoolkit-homepage/poster.html</title>
+		</head>
+				<body>
+						<h1>Poster Page</h1>
+A site <a href="poster.html">poster</a> for information on the course!
 
 
 <img src="my-bedroom-2021-02-02.jpg" width="500" height="500">
