--- a/poster.html
+++ b/poster.html
@@ -15,10 +15,10 @@
     <p>
       This webpage is for information on the Journalism Design Toolkit class
 			at Eugene Lang College for Liberal Arts at the New School University.
-<img src="poster.jpg" width="1322" height="1694"
+<img src="poster.jpg" width="1322" height="1694">
 
-
-<a href="poster.jpg" download>
+Below is a download link to the poster!
+<a href="poster.pdf" download><a/>
 
 	<html>
 				 <head>
