--- a/poster.html
+++ b/poster.html
@@ -5,7 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Journalism Design Poster!</title>
-	<!-- 	<link rel="stylesheet" href="stylesheets/styles.css" type="text/css" /> -->
+		<link rel="stylesheet" href="stylesheets/styles.css" type="text/css">
+		
 	</head>
 
 	<body>
@@ -16,9 +17,9 @@
       This webpage is for information on the Journalism Design Toolkit class
 			at Eugene Lang College for Liberal Arts at the New School University.
 			Click on the photo to download the poster!
-	<a href="poster.jpg" download="journalismdesign.pdf">
+	<a href="poster.pdf" download="journalismdesign.pdf">
 <img src="poster.jpg" width="1322" height="1694">
-</a> 
+</a>
 
 	<html>
 				 <head>
