--- a/photos.html
+++ b/photos.html
@@ -5,8 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Mareike Nebel’s Image page for Journalism Design Toolkit</title>
-	<link rel="stylesheet" href="stylesheets/styles.css" type="text/css">
-	</head>
+	<link rel="stylesheet" href="stylesheets/styles.css" type="text/css" />
 
 	<body>
 
@@ -47,9 +46,7 @@ edited it to fix the underexposure.
 <img src="nebel-before-underexposed.jpg" width="600" height="800">
 <img src="nebel-after-underexposed.jpg" width="600" height="800">
 
-For the next task, we had to take three images &
-bring them into a banner together.
-
+For the next task, we had to take three images & bring them into a banner together.
 
 <img src="nebel-banner.jpg" width="2040" height="660">
 
