--- a/index.html
+++ b/index.html
@@ -21,9 +21,22 @@
 		</a>
 <!-- this is a comment for myself -->
     <p>
-     Hello my name is Mareike Nebel. I am a student at the New School.
+     Hello my name is Mareike Nebel.
+		 I am a student at the New School.
 
-<img src="my-bedroom-2021-02-02.jpg" width="500" height="500">
+		 <html>
+		 <body>
+
+		 <h1>LIST OF THINGS I LIKE!</h1>
+
+		 <ul>
+		   <li>Spending time with friends 👯🖤‍♀️</li>
+			 <li>Walking around the city🚶🏽‍♀️🌃</li>
+		   <li>Going shopping!🧚🏽‍♀️🛍</li>
+		 </ul>
+
+		 </body>
+		 </html>
 
 <html>
 		  <head>
@@ -42,8 +55,7 @@ A site <a href="photos.html">photos</a> I am storing my photos I edited!
 						<h1>Poster Page</h1>
 A site <a href="poster.html">poster</a> for information on the course!
 
-
-You can visit <a href="https://www.pinterest.com">Pinterest</a>.
-</body>
+You interested in coding? Here's the <a href="https://github.com/nebem926/jdtoolkit-homepage">
+backend of my site</a>
 
 </html>
