--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@ A site <a href="photos.html">photos</a> I am storing my photos I edited!
 						<h1>Poster Page</h1>
 A site <a href="poster.html">poster</a> for information on the course!
 
+	<html>
+	<body>
+
 <h1>Backend of My Site</h>
 You interested in coding? Here's the <a href="https://github.com/nebem926/jdtoolkit-homepage">
 backend of my site</a>
 
-</html>
+	 </body>
+	 </html>
