--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ A site <a href="poster.html">poster</a> for information on the course!
 
 	<html>
 	<body>
-		<h1>Backend of my Site</h>
+		<h1>Backend of my Site</h1>
 You interested in coding? Here's the <a href="https://github.com/nebem926/jdtoolkit-homepage">
 backend of my site</a>
 
