--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
      Hello my name is Mareike Nebel. I am a student at the New School.
 		 Duriing the panademic, I have been listening to a lot of music and
 		 have been currently listening to Lana Del Rey's new album,
-		 Chemtrails over the Country Club. Heres the track "White Dress" below.
+		 Chemtrails over the Country Club.
+		 Heres the track "White Dress" below.
 
 <iframe width="420" height="315"
 src="https://www.youtube.com/embed/yJuV8PDwvC8">
 		 </iframe>
 
-All credit given to Lana Del Rey and Jack Antonoff for Chemtrails over the Country
-Club, distributed by Interscope Records and Polydor Records Ltd.
+     All credit given to Lana Del Rey and Jack Antonoff for Chemtrails
+		 over the Country Club, distributed by Interscope Records and
+		 Polydor Records Ltd.
+</p>
 
 		 <html>
 		 <body>
