--- a/index.html
+++ b/index.html
@@ -15,27 +15,38 @@
     <p>
       This webpage is for the Spring 2021 Journalism Design Toolkit class as part of the <a href="https://www.newschool.edu/lang/journalism-design/">Journalism+Design department</a> at Eugene Lang College for Liberal Arts at the New School University.
 
-
     </p>
 
 		</a>
 <!-- this is a comment for myself -->
-    <p>
-     Hello my name is Mareike Nebel. I am a student at the New School.
-		 Duriing the panademic, I have been listening to a lot of music and
-		 have been currently listening to Lana Del Rey's new album,
-		 Chemtrails over the Country Club.
-		 Heres the track "White Dress" below.
 
-<iframe width="420" height="315"
+
+	  <p>
+
+Hello my name is Mareike Nebel. I am a student at the New School.
+Duriing the panademic, I have been listening to a lot of music
+and have been currently listening to Lana Del Rey's new album,
+Chemtrails over the Country Club.
+Heres the track "White Dress" below.
+
+ <iframe width="420" height="315"
 src="https://www.youtube.com/embed/yJuV8PDwvC8">
 		 </iframe>
 
-     All credit given to Lana Del Rey and Jack Antonoff for Chemtrails
-		 over the Country Club, distributed by Interscope Records and
-		 Polydor Records Ltd.
+All credit given to Lana Del Rey and
+Jack Antonoff for Chemtrails over the Country Club,
+distributed by Interscope Records and Polydor Records Ltd.
+
 </p>
 
+<p>
+	Here is a map of the town I grew up in! At the end of summer last year,
+	I moved in New York City for the fall.
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24815.9209733753!2d-77.09640656787577!3d38.969893557762354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c9a1d2464397%3A0x6928eb80f7c7f867!2sChevy%20Chase%2C%20MD%2020815!5e0!3m2!1sen!2sus!4v1617129957661!5m2!1sen!2sus"
+width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+</p>
 		 <html>
 		 <body>
 
