--- a/zine.html
+++ b/zine.html
@@ -20,7 +20,7 @@
 
     <p>
 
-	This zine was made by me, Mareike Nebel. with help and artwork from friends.
+	This zine was made by me, Mareike Nebel, with insight and artwork from friends.
 I designed the entire magazine in Adobe InDesign and gathered all the content for interviews,
 along with photoshopping photos of myself and making QR Codes for my friends content in the zine.
 My zine, "ATARAXIA" focuses on the process and change in teenagers and their art before and during a global pandemic.
