--- a/zine.html
+++ b/zine.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Final Zine Page</title>
-	<!-- 	<link rel="stylesheet" href="stylesheets/styles.css" type="text/css" /> -->
+	<link rel="stylesheet" href="stylesheets/styles.css" type="text/css" />
 	</head>
 
 	<body>
