--- a/zine.html
+++ b/zine.html
@@ -11,11 +11,11 @@
 	<body>
 
 		<h1 class="main-hed">ATARAXIA</h1>
-		<img class="ATARAXIA-booklet final.jpg">
 
   <p>
-		<a href="ATARAXIA-booklet final.pdf">Click to Read and Download!</a>
 
+		<a href="ATARAXIA-booklet final.pdf">Click to Read and Download!</a>
+	<img class="ATARAXIA-booklet final.jpg" width="395" height="612">
 	</p>
 
     <p>
