--- a/zine.html
+++ b/zine.html
@@ -15,7 +15,7 @@
   <p>
 
 
-<img class="ATARAXIA-booklet final.jpg" width="395" height="612">
+<img src="ATARAXIA-booklet final.jpg" width="395" height="612">
 
 </p>
 
