--- a/index.html
+++ b/index.html
@@ -24,21 +24,17 @@
 <p>
 
 Hello my name is Mareike Nebel. I am a student at the New School.
-Duriing the pandemic, I have been listening to a lot of music
-and have been currently listening to Lana Del Rey's new album,
-Chemtrails over the Country Club.
-Heres the track "White Dress" below.
-
+During the pandemic, I have helped my friends with short films for their classes.
+Here is Ava Burkas film, RANCOR below. 
 </p>
 
  <iframe width="420" height="315"
-src="https://www.youtube.com/embed/yJuV8PDwvC8">
+src="https://vimeo.com/515825782">
 		 </iframe>
 <p>
 
-All credit given to Lana Del Rey and
-Jack Antonoff for Chemtrails over the Country Club,
-distributed by Interscope Records and Polydor Records Ltd.
+All credit given to Ava Burka. Starring Britney Khalili, Mareike Nebel and
+Eden Taff.
 
 </p>
 
