--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
 Hello my name is Mareike Nebel. I am a student at the New School.
 During the pandemic, I have helped my friends with short films for their classes.
-Here is Ava Burkas film, RANCOR below. 
+Here is Ava Burkas film, RANCOR below.
 </p>
 
- <iframe width="420" height="315"
-src="https://vimeo.com/515825782">
-		 </iframe>
+<iframe src="https://player.vimeo.com/video/515825782" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/515825782">rancor</a> from <a href="https://vimeo.com/user73229313">Ava Burka</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
 <p>
 
 All credit given to Ava Burka. Starring Britney Khalili, Mareike Nebel and
